# myriad-jax

./: .codecov.yml  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BOARD.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PQN_IMPLEMENTATION.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/instructions/: rl-implementation.instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  release.yml  validate-notebooks.yml
aion/agents/: pqn_agent.py  random_agent.py
aion/envs/: toy_problem.py
aion/platform/: interaction.py  training.py
benchmarks/: README.md  SUMMARY.md  __init__.py  autotune.py  comparison.py  config.py  config.yaml  memory_profile.py  plot_results.py  requirements.txt  run_all.py  run_quick_test.sh  throughput.py  utils.py
benchmarks/results/: comparison_cpu_20251230_090334.csv  comparison_cpu_20251230_093847.csv  comparison_cpu_20260121_220606.csv  comparison_cpu_20260121_221728.csv  memory_both_cpu_20251230_092729.csv  memory_envs_cpu_20251230_090333.csv  memory_envs_cpu_20260121_220354.csv  memory_envs_cpu_20260121_221519.csv  throughput_cpu_20251229_235353.csv  throughput_cpu_20251229_235425.csv  throughput_cpu_20251230_090329.csv  throughput_cpu_20260121_220348.csv  throughput_cpu_20260121_221516.csv
configs/: config.yaml  pqn_cartpole.yaml
configs/agent/: bangbang.yaml  dqn.yaml  dqn_agent.yaml  pid.yaml  pqn.yaml  pqn_agent.yaml  random.yaml  random_agent.yaml
configs/env/: cartpole.yaml  cartpole_control.yaml  cartpole_sysid.yaml  cartpole_v1.yaml  ccas_ccar_control.yaml  ccas_ccar_env.yaml  ccas_ccar_sysid.yaml  ccas_ccar_v1.yaml  ccasr_gfp_control.yaml  example.yaml  example_env.yaml  toy_env_v1.yaml
configs/experiments/: README.md  cartpole_heavy_pole.yaml  ccas_sinewave_tracking.yaml  ccasr_gfp_sinewave_tracking.yaml  dqn_cartpole_default.yaml  dqn_fast_exploration.yaml  dqn_slow_exploration.yaml  eval_bangbang_cartpole.yaml  pqn_cartpole_default.yaml
configs/run/: dqn_cartpole.yaml  dqn_cartpole_control.yaml  pqn_cartpole.yaml  pqn_cartpole_control.yaml
configs/sweeps/: README.md  dqn_cartpole_sweep.yaml
docs/: PLAN.md  README.md  WRITING_GUIDE.md  conf.py  index.md
docs/01_getting-started/: 01_philosophy.md  03_quickstart.md
docs/02_user-guide/: 01_concepts.md  02_custom_env.md  03_custom_agent.md  04_running_experiments.md  06_benchmarking.md
docs/03_api/: 01_index.md  02_env.md  03_agent.md  04_spaces.md  05_platform.md  06_types.md  agent.md  core.md  env.md  overview.md
docs/04_contributing/: 01_setup.md  02_configuration.md  03_architecture.md
docs/advanced/: auto_tuning.md  benchmarking.md  custom_task.md
docs/api/: overview.md  platform.md  types.md
docs/api-reference/: agents.md  api_core.md  environments.md
docs/contributing/: architecture.md  config-refactoring-plan.md  configuration.md  (+1 more)
examples/: 01_cartpole_basic_control.ipynb  01_classical_control.yaml  03_advanced_training.py  04_evaluate_pretrained.py  07_quickstart_simple.py  08_episode_collection.py  10_performance_demo.py  11_render_ccas_ccar.py  12_render_population_ccas_ccar.py  README.md  dqn_cartpole.md
future-ideas/: platform-adaptation.md
scripts/: ci-check.sh  evaluate.py  render_episodes.py  run_random_agent.py  train.py  train_pqn.py  train_sweep.py
tests/: conftest.py  test_agents.py  test_cli.py  test_envs.py  test_example_env.py  test_interaction.py  test_plotting.py  test_random_agent.py  test_toy_problem.py
tutorials/: 01_cartpole_basic_control.ipynb  02_classical_controllers_comparison.ipynb
(+345 files in other folders)
