[project]
name = "myriad-jax"
version = "0.1.0"
description = "Platform for large-scale high-throughput control & decision-making experiments"
authors = [
    { name = "Robin Henry", email = "robin.henry012@gmail.com" },
]
readme = "README.md"

[tool.poetry]
packages = [
    { include = "myriad", from = "src" },
]
exclude = ["tests", "tests.*"]

[tool.poetry.scripts]
myriad = "myriad.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^6.0.0"
tqdm = "^4.67.1"
flax = "^0.12.0"
jaxlib = "0.7.2"
click = "^8.1.8"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
wandb = "^0.23.0"
matplotlib = "^3.8.0"
imageio = "^2.34.0"
imageio-ffmpeg = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
pre-commit = "^4.1.0"
sphinx = "^7.0.0"
furo = "^2024.0.0"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2024.0.0"
sphinx-copybutton = "^0.5.2"
linkify-it-py = "^2.0.0"
ipykernel = "^7.1.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jax = { version = "0.7.2", extras = ["cuda12"] }

# [tool.poetry.group.macos_gpu]
# optional = true

# [tool.poetry.group.macos_gpu.dependencies]
# jax-metal = "^0.1.1"
# jax = "<0.5.1"  # jax-metal breaks with jax/jaxlib == 0.5.1 (25/02/2025)

# This block will ensure that the version number is automatically detected from the git tag
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v?(?P<base>\\d+(\\.\\d+)*)"
bump = true

[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120

[tool.mypy]
files = ["src/myriad/**/*.py"]
# Ignore missing type stubs for third-party libraries
ignore_missing_imports = false  # Explicit about what we ignore

[[tool.mypy.overrides]]
module = [
    "chex",
    "chex.*",
    "optax",
    "optax.*",
    "plotly",
    "plotly.*",
    "yaml",
    "tqdm",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["myriad"]

[tool.pytest.ini_options]
# Pytest configuration
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "examples: marks tests that run example scripts",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py311"

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

# E731 = do not assign a lambda expression, use a def instead
ignore = ["E731"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["myriad"]
known-third-party = ["wandb", "hydra", "omegaconf"]
